fix code even more

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8",
+        "editor.formatOnSave": true
+    },
+    "python.analysis.typeCheckingMode": "off",
     "cSpell.words": [
         "hass",
+        "heatpump",
         "homeassistant"
     ]
 }
