--- a/custom_components/knv_heatpump/manifest.json
+++ b/custom_components/knv_heatpump/manifest.json
@@ -6,6 +6,7 @@
     "documentation": "https://github.com/LDprg/KNV_heatpump_ha",
     "issue_tracker": "https://github.com/LDprg/KNV_heatpump_ha/issues",
     "iot_class": "local_polling",
+    "integration_type": "hub",
     "requirements": [],
     "version": "0.0.1"
   }
