--- a/custom_components/knv_heatpump/manifest.json
+++ b/custom_components/knv_heatpump/manifest.json
@@ -7,5 +7,6 @@
     "documentation": "https://github.com/LDprg/KNV_heatpump_ha",
     "issue_tracker": "https://github.com/LDprg/KNV_heatpump_ha/issues",
     "iot_class": "local_polling",
-    "loggers": ["custom_components.knv_heatpump"]
+    "loggers": ["custom_components.knv_heatpump"],
+    "version": "0.0.2"
   }
