--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     },
     "python.analysis.typeCheckingMode": "basic",
     "cSpell.words": [
+        "arpreq",
         "DESCR",
         "hass",
         "heatpump",
