--- a/custom_components/knv_heatpump/manifest.json
+++ b/custom_components/knv_heatpump/manifest.json
@@ -3,10 +3,10 @@
     "name": "KNV Heatpump",
     "codeowners": [ "@LDprg" ],
     "config_flow": true,
-    "requirements": ["knvheatpumplib>=0.0.9", "scapy", "async_timeout" ],
+    "requirements": ["knvheatpumplib>=0.0.10", "scapy", "async_timeout" ],
     "documentation": "https://github.com/LDprg/KNV_heatpump_ha",
     "issue_tracker": "https://github.com/LDprg/KNV_heatpump_ha/issues",
-    "iot_class": "local_polling",
+    "iot_class": "local_push",
     "loggers": ["custom_components.knv_heatpump"],
     "version": "0.0.2"
   }
