--- a/custom_components/knv_heatpump/manifest.json
+++ b/custom_components/knv_heatpump/manifest.json
@@ -3,7 +3,7 @@
     "name": "KNV Heatpump",
     "codeowners": [ "@LDprg" ],
     "config_flow": true,
-    "requirements": ["knvheatpumplib>=0.0.40", "scapy", "async_timeout" ],
+    "requirements": ["knvheatpumplib>=0.0.40", "getmac", "async_timeout" ],
     "documentation": "https://github.com/LDprg/KNV_heatpump_ha",
     "issue_tracker": "https://github.com/LDprg/KNV_heatpump_ha/issues",
     "iot_class": "local_push",
